[project]
name = "heartbeatmqtt"
version = "0.1.0"
description = "Reliable configurable MQTT heartbeat publisher"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "paho-mqtt>=2.1.0,<3.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "ruff>=0.11.0,<1.0.0",
]

[project.scripts]
heartbeatmqtt = "heartbeatmqtt.app:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
